Implement `@JsonInclude(content=` (#1050)